--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,28 @@
 @layer reset, base, tokens, recipes, utilities;
 
+:root {
+    color-scheme: light dark;
+  }
+  
+  [data-theme="light"] {
+    color-scheme: light;
+  }
+  
+  [data-theme="dark"] {
+    color-scheme: dark;
+  }
+  
+  body {
+    margin: 0;
+    min-height: 100vh;
+    background-color: var(--colors-app-bg);
+    color: var(--colors-app-text);
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  /* Asegúrate de que las transiciones sean suaves */
+  *, *::before, *::after {
+    transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
+  }
+  
+  
